Details
-
Bug
-
Resolution: Done
-
P2: Important
-
6.2.3
-
None
-
Qt 6.2.3
Processor Intel(R) Core(TM) i7-7700 CPU @ 3.60GHz 3.60 GHz
Installed RAM 32.0 GB (31.9 GB usable)
System type 64-bit operating system, x64-based processor
Edition Windows 11 Pro
Version 21H2
Installed on 12/24/2021
OS build 22000.318
Experience Windows Feature Experience Pack 1000.22000.318.0
Headset Lenovo LP 6
Qt 6.2.3 Processor Intel(R) Core(TM) i7-7700 CPU @ 3.60GHz 3.60 GHz Installed RAM 32.0 GB (31.9 GB usable) System type 64-bit operating system, x64-based processor Edition Windows 11 Pro Version 21H2 Installed on 12/24/2021 OS build 22000.318 Experience Windows Feature Experience Pack 1000.22000.318.0 Headset Lenovo LP 6
-
-
152530f929 (qt/qtmultimedia/dev) 8543287b45 (qt/qtmultimedia/6.2) fbac328fe9 (qt/qtmultimedia/6.3) 8543287b45 (qt/tqtc-qtmultimedia/6.2) fbac328fe9 (qt/tqtc-qtmultimedia/6.3) 152530f929 (qt/tqtc-qtmultimedia/dev) fbac328fe9 (qt/qtmultimedia/6.3.0)
Description
There is no any other audio devices, just connected bluetooth headset, after reconnect headset it is stop write audio in file(file created but it is empty)
Steps to reproduce:
1 run application with bluetooth headset connected to laptop(pc)
2 push button start recording(file path used QStandardPaths::standardLocations(QStandardPaths::DocumentsLocation))
3 push button stop recording
3 turn off bluetooth
4 turn on bluetooth
5 push button start recording
6 push button stop recording
Actual results:
file created but it is empty
Expected results:
file is not empty
Attachments
Issue Links
- relates to
-
QTBUG-101591 MediaRecorder/CaptureSession doesn't release audio input (mic) on stop recording
-
- Closed
-
For Gerrit Dashboard: QTBUG-101434 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
400747,4 | Windows: Restore device session state when ending media recordings | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
401106,3 | Windows: Restore device session state when ending media recordings | 6.3 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
401107,3 | Windows: Restore device session state when ending media recordings | 6.2 | qt/qtmultimedia | Status: MERGED | +2 | 0 |