Windows: Restore device session state when ending media recordings

The device session active/inactive status should be restored after the
end of media recordings, otherwise the input devices may remain in use
and cause other issues.

Fixes: QTBUG-101434
Fixes: QTBUG-101591
Pick-to: 6.3 6.2
Change-Id: I35c8ed7a36556472b7c015e6fd2044aac40314eb
Reviewed-by: Lars Knoll <lars.knoll@qt.io>